--- a/unit1_projects/stylesheets/dbc1.css
+++ b/unit1_projects/stylesheets/dbc1.css
@@ -6,7 +6,7 @@ html {
 	border: 10px solid black;
 	padding: 10px;
 	line-height: 140%;
-	font-family: zhukov_zippo;
+	font-family: JS-Duangta;
 }
 
 #me img {
