--- a/blog-posts/css/style.css
+++ b/blog-posts/css/style.css
@@ -1,3 +1,12 @@
+body {
+	background: url('../../unit1_projects/images/graphy/graphy.png');
+}
+
+#title {
+	font-size: 5em;
+	margin: 10px auto;
+}
+
 .thecontent {
 	box-shadow: 10px 10px solid black;
 }
@@ -7,4 +16,8 @@
 
 .main-section {
 	padding: 40px;
+}
+
+li {
+	line-height: 140%;
 }
