--- a/style1.css
+++ b/style1.css
@@ -33,6 +33,17 @@ h2 {
 	font-family: yo;
 	text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
 }
+h3 {
+	font-size: 3em;
+	font-family: yo;
+	text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+}
+
+h4 {
+	font-size: 2.5em;
+	font-family: yo;
+	text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+}
 
 .text-center {
 	text-align: center;
