--- a/style1.css
+++ b/style1.css
@@ -65,7 +65,11 @@ h4 {
 .fullscreen {
 	height: 100vh;
 }
-
+ @media screen and (max-width: 1200px) {
+ .fullscreen {
+   height: auto;
+ }
+}
 .shadow {
 	-webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.4);
 	box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.4)
